Working static lib and logger
- Static lib can be linked to Sandbox/Editor and is callable
- Basic logger that call AZ::Debug::Trace methods

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,13 @@
 [workspace]
 members = [
-    "lmbr_sys",
     "lmbr",
+    "lmbr_logger",
+    "lmbr_sys",
+    "example_static_lib",
 ]
 default-members = [
-    "lmbr_sys",
     "lmbr",
+    "lmbr_logger",
+    "lmbr_sys",
+    "example_static_lib",
 ]
