--- a/example_static_lib/Cargo.toml
+++ b/example_static_lib/Cargo.toml
@@ -1,12 +1,14 @@
 [package]
-name = "lmbr_sys"
+name = "example_static_lib"
 version = "0.1.0"
 authors = ["jeikabu <jeikabu@users.noreply.github.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[dependencies]
+[lib]
+crate-type = ["staticlib"]
 
-[build-dependencies]
-bindgen = "0.51"
+[dependencies]
+lmbr_logger = { path = "../lmbr_logger" }
+log = "0.4"
