--- a/lmbr/Cargo.toml
+++ b/lmbr/Cargo.toml
@@ -4,6 +4,22 @@ version = "0.1.0"
 authors = ["jeikabu <jeikabu@users.noreply.github.com>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+description = "Amazon Lumberyard (unofficial)"
+repository = "https://github.com/jeikabu/lmbr"
+keywords = ["lmbr", "lumberyard"]
+categories = ["game-engines"]
+license = "MIT"
+
+[features]
+default = ["lmbr_sys"]
 
 [dependencies]
+lmbr_logger = { version = "0.1", path = "../lmbr_logger" }
+lmbr_sys = { version = "0.1", optional = true, path = "../lmbr_sys" }
+
+[[example]]
+name = "staticlib"
+crate-type = ["staticlib"]
+
+[dev-dependencies]
+log = "0.4"
