--- a/lmbr_logger/Cargo.toml
+++ b/lmbr_logger/Cargo.toml
@@ -4,8 +4,12 @@ version = "0.1.0"
 authors = ["jeikabu <jeikabu@users.noreply.github.com>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+description = "Logger for Amazon Lumberyard (unofficial)"
+repository = "https://github.com/jeikabu/lmbr"
+keywords = ["lmbr", "lumberyard", "logger"]
+categories = ["game-engines", "development-tools::debugging"]
+license = "MIT"
 
 [dependencies]
-lmbr_sys = { path = "../lmbr_sys" }
+lmbr_sys = { version = "0.1", path = "../lmbr_sys" }
 log = "0.4"
