Initial work creating bindings for Editor
- Currently bindgen fails with stack overflow

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,13 @@
 [workspace]
 members = [
     "lmbr",
+    "lmbr_editor",
     "lmbr_logger",
     "lmbr_sys",
 ]
 default-members = [
     "lmbr",
+    "lmbr_editor",
     "lmbr_logger",
     "lmbr_sys",
 ]
