Editor plugin moved to own crate with own build.rs
- Common build script code moved to lmbr_build crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,11 @@
 [workspace]
 members = [
     "lmbr",
+    "lmbr_build",
     "lmbr_editor",
     "lmbr_logger",
     "lmbr_sys",
+    "editor_plugin",
 ]
 default-members = [
     "lmbr",
