Updates for Lumberyard 1.21 and remove unused lmbr_editor crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,14 +2,12 @@
 members = [
     "lmbr",
     "lmbr_build",
-    "lmbr_editor",
     "lmbr_logger",
     "lmbr_sys",
-    "editor_plugin",
+    "editor_plugin"
 ]
 default-members = [
     "lmbr",
-    "lmbr_editor",
     "lmbr_logger",
     "lmbr_sys",
 ]
