--- a/lmbr_sys/Cargo.toml
+++ b/lmbr_sys/Cargo.toml
@@ -13,10 +13,11 @@ license = "MIT"
 [dependencies]
 
 [build-dependencies]
-bindgen = "0.51"
+bindgen = {version = "0.51", optional = true}
 lmbr_build = {version = "0.1", path = "../lmbr_build"}
 
 [features]
 default = [ "lmbr_editor", "lmbr_fw_azcore"]
 lmbr_fw_azcore = []
 lmbr_editor = []
+bindgen_generate = ["bindgen"]
